# perifit

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: cube_structured.py  run_test_mesh.py  test_mesh_cube_1000.npz
perifit/: __init__.py  cli.py  config.py
perifit/core/: __init__.py  local_system.py  local_system_2d.py  moments.py  moments_2d.py  targets.py  targets_2d.py  weights.py  weights_2d.py
perifit/data/: test_mesh_cube_1000.csv
perifit/io/: writers.py
perifit/mesh/: readers.py
perifit/quality/: __init__.py  cleaning.py  diagnostics.py
scripts/: readme_fig_cleaning.py  readme_fig_convergence_timing.py
tests/: test_bbpd.py  test_cli.py  test_moments.py  test_nosb.py  test_quality.py  test_weights.py  test_weights_reference.py
